--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@types/jwt-decode": "^2.2.1",
     "cordova-android": "9.0.0",
+    "jwt-decode": "^3.0.0-beta.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
