--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/android": "^2.4.0",
     "@capacitor/core": "2.4.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/paypal": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
@@ -42,7 +43,9 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "card.io.cordova.mobilesdk": "^2.1.0",
     "codelyzer": "^6.0.0",
+    "com.paypal.cordova.mobilesdk": "^3.5.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -71,7 +74,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "com.paypal.cordova.mobilesdk": {}
     },
     "platforms": [
       "android"
